refactor: LeetCode 56. Merge Intervals
https://leetcode.com/problems/merge-intervals/description/